--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,11 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sonar.buildVersion>5.3</sonar.buildVersion>
-        <sonar.pluginName>Slack Notifier</sonar.pluginName>
-        <jdk.min.version>1.6</jdk.min.version>
+    <sonar.buildVersion>5.3</sonar.buildVersion>
+    <sonar.pluginName>Slack Notifier</sonar.pluginName>
+    <jdk.min.version>1.7</jdk.min.version>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
 	<dependencies>
